Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-3057

Hang at sanity test_56x and test_56w

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.4.0
    • Lustre 2.4.0
    • 3
    • 7453

      The root cause of this problem is that ll_setattr is called directly in ioctl ll_swap_layouts(). It should have been called with inode mutex held.

              if (llss->ia2.ia_valid != 0)
                      rc = ll_setattr(file1->f_dentry, &llss->ia2);
      
              if (llss->ia1.ia_valid != 0)
                      rc1 = ll_setattr(file2->f_dentry, &llss->ia1);
      

            jay Jinshan Xiong (Inactive)
            jay Jinshan Xiong (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: