LU-3057 llite: use inode_setattr to reset inode times

This issue was imported by LU-2445 where ll_setattr() was used to
reset inode times after migration. ll_setattr() must be called with
inode mutex held so we need to use inode_setattr() instead.

Signed-off-by: Jinshan Xiong <jinshan.xiong@intel.com>
Change-Id: Ibdb30c78bf8642886afc7343544d7db3bcbe6726